Change renderers in initial config